# coinbase-bot

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
config/: config.yaml  strategies.yaml
src/: __init__.py
src/backtesting/: __init__.py  engine.py
src/cli/: commands.py
src/core/: __init__.py  client.py  portfolio.py
src/strategies/: base.py  rsi_strategy.py  sma_crossover.py  volatility_breakout.py
src/utils/: config.py  exceptions.py  logger.py
